# DjangoMovies

./: pyproject.toml
DM/DM/: settings.py  urls.py
