[tool.poetry]
name = "djangomovies"
version = "0.1.0"
description = ""
authors = ["Artem <kznartee16reg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.5"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
